# BetterCallClaude

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  KNOWLEDGE_BASE_INDEX.md  QUICK_DEPLOY.sh  README.md  SESSION_SUMMARY_2025-01-12.md  SPRINT2_SUMMARY.md  SPRINT2_TEST_REPORT.md  SPRINT3_MCP_INTEGRATION.md  SPRINT3_PHASE2_COMPLETE.md  SPRINT3_PLAN.md  SPRINT3_PROGRESS.md  UPGRADE.md  USAGE_GUIDE.md  bettercallclaude_cheatsheet.md  conftest.py  git-setup.sh  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  simple-test.js  test-mcp-integration.sh
.claude/: BETTERASK.md  LEGAL_PRINCIPLES.md  LEGAL_SYMBOLS.md  SWISS_LAW_CONFIG.md
.claude/commands/: agent-citation.md  agent-compliance.md  agent-data-protection.md  agent-drafter.md  agent-fiscal.md  agent-orchestrator.md  agent-procedure.md  agent-researcher.md  agent-risk.md  agent-strategist.md  agent-translator.md  agent:cantonal.md  agent:corporate.md  agent:orchestrator.md  agent:realestate.md  doc-analyze.md  legal-cantonal.md  legal-draft.md  legal-federal.md  legal-help.md  legal-research.md  legal-routing.md  legal-strategy.md  legal-version.md  legal.md  legal:cite.md  swiss-federal.md  swiss:precedent.md
.claude/mcp/: MCP_Entscheidsuche.md  MCP_Legal_Citations.md
.claude/modes/: MODE_Cantonal_Law.md  MODE_Federal_Law.md  MODE_Multi_Lingual.md
.serena/: project.yml
bettercallclaude2-0/: BetterCallClaude_Implementation_Guide.md  BetterCallClaude_PRD_v2.0.md  QUICK_START_GUIDE.md  README_DELIVERABLES.md
claudedocs/: COMPREHENSIVE_TEST_REPORT_2024-11-24.md  FRAMEWORK_FIX_SESSION.md  FRAMEWORK_TEST_STATUS.md  INTEGRATION_TEST_RESULTS.md  SESSION_CHECKPOINT_2025-01-23.md  SPRINT1_COMPLETION_REPORT.md  SPRINT2_COMPLETION_REPORT.md  SPRINT3_COMPLETION_REPORT.md  SPRINT3_PHASE1_COMPLETE.md  SPRINT3_PHASE1_DATABASE_IN_PROGRESS.md  SPRINT3_PHASE1_DATABASE_TESTS_COMPLETE.md  SPRINT3_PHASE1_REPOSITORIES_COMPLETE.md  SPRINT3_PHASE3_COMPLETE.md
docs/: AGENT_ARCHITECTURE.md  command-reference.md  getting-started.md  windows-installation.md
mcp-servers/: .eslintrc.json  INTEGRATION_TEST_RESULTS.md  package-lock.json  package.json
scripts/: test_legal_commands.py
sprint_stories/: IMPORT_READY_STORIES_SPRINT_1-2.md
(+215 files in other folders)
